<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="30dp"
        card_view:cardCornerRadius="6dp">

        <TextView
            android:id="@+id/bikeNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="30dp"
        card_view:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/last_reservation"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lastBorrowTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="30dp"
        card_view:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/next_reservation"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nextBorrowTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="30dp"
        card_view:cardCornerRadius="6dp"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/number_of_kilometers_driven"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/noOfKms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="30dp"
        card_view:cardCornerRadius="6dp"

        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/intent"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/intentSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/intentItems"
                android:paddingVertical="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sector"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sectorSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/sectorItems"
                android:paddingVertical="10dp" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/number_of_reservations"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/noOfReservations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout></androidx.cardview.widget.CardView>


    </LinearLayout>