<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        android:padding="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        >
    <EditText
        android:id="@+id/nameAndSurnameTxt"
        android:layout_width="match_parent"
        android:hint="@string/name_and_surname"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        android:padding="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/sector"/>
            <Spinner
                android:id="@+id/sectorSpinner"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/sectorItems"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        android:padding="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:onClick="onClickFrom"/>
                <TextView
                    android:id="@+id/dateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:onClick="onClickTo"/>
            <TextView
                android:id="@+id/dateTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        android:padding="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">

            <SeekBar
                android:id="@+id/distanceSeekBar"
                android:max="50"
                android:progress="5"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        android:padding="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/intent"/>
            <Spinner
                android:id="@+id/intentSpinner"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/intentItems"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>